test/ruby/test_gc.rb
@@ -331,6 +331,32 @@ class TestGc < Test::Unit::TestCase
     end;
   end
 
+  def test_interrupt_in_finalizer
+    bug10595 = '[ruby-core:66825] [Bug #10595]'
+    src = <<-'end;'
+      f = proc {1000.times {}}
+      loop do
+        ObjectSpace.define_finalizer(Object.new, f)
+      end
+    end;
+    error = nil
+    status = nil
+    EnvUtil.invoke_ruby(["-e", src], "", false, true) do |_, _, stderr, pid|
+      sleep 0.1
+      Process.kill("INT", pid)
+      th = Thread.start do
+        sleep 1
+        Process.kill("KILL", pid) rescue nil
+      end
+      error = stderr.read
+      _, status = Process.wait2(pid)
+      th.kill
+    end
+    assert_predicate status, :signaled?
+    assert_equal "INT", Signal.signame(status.termsig), bug10595
+    assert_match /Interrupt/, error, bug10595
+  end
+
   def test_verify_internal_consistency
     assert_nil(GC.verify_internal_consistency)
   end
